--- a/notification-service/Dockerfile
+++ b/notification-service/Dockerfile
@@ -1,4 +1,18 @@
-FROM ubuntu:latest
+FROM maven:3.9.4-eclipse-temurin-21 AS build
 LABEL authors="Alexey Bobrovich"
 
-ENTRYPOINT ["top", "-b"]
+WORKDIR /app
+
+COPY pom.xml ./
+COPY src ./src
+
+RUN mvn clean package -DskipTests
+
+FROM amazoncorretto:21-alpine
+LABEL authors="Alexey Bobrovich"
+
+WORKDIR /app
+
+COPY --from=build /app/target/*.jar app.jar
+
+ENTRYPOINT ["java", "-jar", "app.jar"]
